<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="a:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/a_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal|numberSigned"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="b:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/b_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="left|center_vertical"
            android:inputType="number|numberDecimal|numberSigned"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="Result:"
            android:textSize="20sp"
            tools:text="Result:" />

        <TextView
            android:id="@+id/result_output"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:text="@string/result"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_button"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_add"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sub_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_sub"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/div_button"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_div"
            android:textSize="20sp" />

        <Button
            android:id="@+id/nul_button"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_nul"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/degree_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_degree"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="Функции ниже применяются к числу a"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_sin"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cos_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_cos"
            android:textSize="20sp" />

        <Button
            android:id="@+id/tan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_tan"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/root_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_square_root"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>